# ObjectManipulation-TFM_NicolasFraga

./: README.md
models_pick_and_place/50mmbin/: model.sdf
models_pick_and_place/Dry_Bag/: model.config
models_pick_and_place/Wood_Cube/: model.config  model.rsdf
models_pick_and_place/aruco_cube_60/: model.sdf
models_pick_and_place/aruco_tag_100/: model.config  model.sdf
models_pick_and_place/aruco_tag_110/: model.config  model.sdf
models_pick_and_place/aruco_tag_40/: model.sdf
models_pick_and_place/aruco_tag_50/: model.config
models_pick_and_place/aruco_tag_60/: model.config  model.sdf
models_pick_and_place/aruco_tag_70/: model.config  model.sdf
models_pick_and_place/aruco_tag_80/: model.sdf
models_pick_and_place/book_13/: model.sdf
models_pick_and_place/book_16/: model.config
models_pick_and_place/cube_1/: model.sdf
models_pick_and_place/cube_2/: model.config
models_pick_and_place/cylinder_b/: model.sdf
models_pick_and_place/follow_line/: model.sdf
models_pick_and_place/ground_plane/: model.sdf
models_pick_and_place/movable_coke_can/: model.config  model.sdf
models_pick_and_place/movable_coke_can_green_layed/: model.sdf
models_pick_and_place/simple_ground_house/: model.config  model.sdf
models_pick_and_place/toolbox_metal/: model.sdf
tfm_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tfm_ws/log/: latest_build
tfm_ws/src/arm_movement/: CMakeLists.txt
tfm_ws/src/arm_movement/src/: mani_yolo.cpp
tiago_ws/install/: setup.bash  (+4 more)
worlds_pick_and_place/: pick_and_place.world  pick_and_place_can.world
(+299 files in other folders)
